2006-08-19  Will Duquette <will@wjduquette.com>
	* main2.tcl, snit.test: Fixed Bug 1483168: "Namespaced snit objs
	are not commands in their ns".  In particular, Snit 2.x types and
	widgets now use [namespace path] to give themselves access to
	their parent namespace.
	* snit.man,snitfaq.man: Updated accordingly; also, fixed a couple
	of typos in snitfaq.man.

2006-08-15  Will Duquette <will@wjduquette.com>
	* main2.tcl, snit.test: Fixed Bug 1532791: "snit2, 
	snit::widget problem".

2006-08-12  Will Duquette <will@wjduquette.com>
	* main1.tcl, main1_83.tcl, main2.tcl: Replaced as many [string equal] calls
	in main1_83.tcl with {"" ==/!= $a} expressions, so that the
	differences between the two files are minimized.  Also removed the
	"-glob" from calls to "array names" in main1.tcl.  There are now
	only a few remaining differences between the two files.

	Also, I added a "return" to the end of RT.DestroyObject in all
	three "main" modules, to prevent a confusing return value from
	"$object destroy" that Andreas noticed a while back.

	* snit.test: Two tests, iinfo-6.4 and iinfo-6.5, failed on Tcl
	8.3.  The -result in both cases was a list of Tk widget options
	that included some new options defined in Tcl 8.4.  I added two
	new constraints, tcl83 and tcl84, and duplicated the two tests,
	one for each.
	
2006-08-10  Will Duquette <will@wjduquette.com>
	* snit.man: Added documentation for how to define new
	validation types.

2006-08-09  Will Duquette <will@wjduquette.com>
	* snit.man: Added documentation for the "-type" option-definition
	option, and for the validation types.  I still need to fill in a
	section on defining new validation types.
	* validate.tcl: Cleaned up the header comment.

2006-08-08  Will Duquette <will@wjduquette.com>
	* main1.tcl: Removed all "eq" and "ne" expressions, to reduce
	the differences between main1.tcl and main1_83.tcl.  Unlike
	main1_83.tcl, though, I used the forms {"" == $a} and 